--- a/SitoMobile.html
+++ b/SitoMobile.html
@@ -4,25 +4,91 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="reset.css">
     <title>EpicShool</title>
-    <style>
-      body{
-          background-size: auto;
-          background-size: cover;
-      }
-      .box{
-          height: 200px;
-          width:570px;
-          text-align:center;
-          padding:10px;
-          background-color #248fa4;
-          font-family: 'Times New Roman', Times, serif;
-          font-size:50px;
-          color: white;"
-      }
-    </style>
   </head>
-  <body background="./assets/sfondo.png">
-    <div class=".box">EPICODE - IL BLOG DEI DEVELOPERS</div>
+  <body>
+    <header>
+      <img class="" src="./assets/sfondo.png" alt="Sfondo">
+      
+      </nav>
+    </div>
+    </header>
+    <main>
+      <img src="./assets/logo.svg" alt="Logo">
+      <div>
+      <h1>EPICODE - IL BLOG DEI DEVELOPERS </h1>
+      <nav>
+        <a href="#">→ HOME </a>
+        <br>
+        <a href="#">ARTICOLI </a>
+        <br>
+        <a href="#">LAVORA CON NOI</a>
+        <h2>Come creare un template per i post </h2>
+        <p>- pubblicato il 25- 10-2020 </p>
+        <article>
+          <p> La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine EPICODE School
+            Le varie aree saranno quindi suddivise in: 
+          </p>
+           <ul>
+            <li>Contenuti di intestazione del tag <span><header></span></li>
+            <li>Contenuti centrali variabili del tag <span> <main> </span> (corpo principale) </li>
+            <li>Contenuti di fine pagina comuni, da inserire nel tag <span> <footer> </span></li>
+           </ul>
+           <p>Formattazione del codice Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <span> selezionare con i CSS.</span> Perciò i passi saranno:</p>
+           <ol>
+            <li>Progettare su carta il markup finale, assegnando ad ogni specifico testo il tag appropriato</li>
+            <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+            <li>Applicare gli stili CSS </li>
+           </ol> 
+        </article>
+    </main>
+    <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.</p>
+    <table>
+      <caption>Diffusione dei CSS:</caption>
+      <thead>
+        <tr>
+          <th>Anno</th>
+          <th>% di utilizzo </th>
+          <th>Supporto browsers</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2000</td>
+          <td>20%</td>
+          <td>17%</td>
+        </tr>
+        <tr>
+          <td>2002 </td>
+          <td>35%</td>
+          <td>22% </td>
+        </tr>
+        <tr>
+          <td>2004</td>
+          <td>45%</td>
+          <td>42% </td>
+        </tr>
+        <tr>
+        <td></td>
+        <td></td>
+        <td></td> 
+      </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+
+      </tbody>
+    </table>
+    <form action="">
+
+    </form>
+    <footer>
+
+    </footer>
   </body>
 </html>
