--- a/SitoMobile.html
+++ b/SitoMobile.html
@@ -9,14 +9,8 @@
     <link rel="stylesheet" href="reset.css">
     <title>EpicShool</title>
   </head>
-  <body>
-    <header>
-      <img class="" src="./assets/sfondo.png" alt="Sfondo">
-      
-      </nav>
-    </div>
-    </header>
-    <main>
+  <body  background="./assets/sfondo.png">
+    <header> 
       <img src="./assets/logo.svg" alt="Logo">
       <div>
       <h1>EPICODE - IL BLOG DEI DEVELOPERS </h1>
@@ -26,6 +20,9 @@
         <a href="#">ARTICOLI </a>
         <br>
         <a href="#">LAVORA CON NOI</a>
+      </nav>
+    </header>
+    <main>
         <h2>Come creare un template per i post </h2>
         <p>- pubblicato il 25- 10-2020 </p>
         <article>
@@ -71,23 +68,22 @@
           <td>45%</td>
           <td>42% </td>
         </tr>
-        <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-      </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-
       </tbody>
     </table>
-    <form action="">
-
-    </form>
+    <p>Un test di validazione potrà essere fatto tramite il tool online dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dvOvHXruEDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h3>NOVITÀ</h3>
+    <P>NOVITÀ Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter: </P>
+    <input type="email" placeholder="INSERISCI LA TUA MAIL">
     <footer>
+      <h4>
+        Blog Epicode ©2021 
+      </h4>
+      <br>
+      <h4>
+        Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233. <a href="#">info@epicode.school</a> 
+      </h4>
+
 
     </footer>
   </body>
