--- a/SitoMobile.html
+++ b/SitoMobile.html
@@ -72,7 +72,6 @@
     </table>
     <p>Un test di validazione potrà essere fatto tramite il tool online dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:</p>
     <iframe width="400" height="215" src="https://www.youtube.com/embed/dvOvHXruEDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
     <h3>NOVITÀ</h3>
     <P> Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter: </P>
     <input type="email" placeholder="INSERISCI LA TUA MAIL">
@@ -96,7 +95,14 @@
   </main>
   
     <footer>
-      
+      <h4>
+        Blog Epicode ©2021 
+      </h4>
+      <br>
+      <h4>
+        Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233. <a href="#">info@epicode.school</a> 
+      </h4>
+
     </footer>
   </body>
 </html>
